src/objects/Project_type__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <inlineHelpText>Enter a hexadecimal color (excluding #)</inlineHelpText>
        <label>Color</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldset__c</fullName>
        <description>This should be a choice from Project field set name</description>
        <label>Fieldset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plantype__c</fullName>
        <label>Plan type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sort__c</fullName>
        <label>sort</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project type</label>
    <nameField>
        <label>Project type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>